Thu May 14 15:59:43 2015  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam/c_builtin/cpp_code.rb : Fix abend problem when
	  evaluating #error directive followed by no pp-tokens.

Thu May 14 15:02:06 2015  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* spec/adlint/location_spec.rb : Migrate to new RSpec expectations.
	* spec/adlint/cc1/ctrlexpr_spec.rb : Ditto.
	* spec/adlint/cc1/domain_spec.rb : Ditto.
	* spec/adlint/cc1/operator_spec.rb : Ditto.
	* spec/adlint/cc1/syntax_spec.rb : Ditto.
	* spec/adlint/cc1/type_spec.rb : Ditto.
	* features/step_definitions/code_check_steps.rb : Ditto.

Thu May 14 15:00:40 2015  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/syntax.rb : Fix uninitialized inst-var access.

Wed May 28 13:38:32 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.17
	  - Add unused global variable elimination to reduce memory usage.

Wed May 28 11:53:57 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Fix ugly component name of the
	  representative array element.

Tue May 27 18:46:08 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/expr.rb : Fix abend problem when the size omitted
	  array is accessed; caused by changes of array-subscript-expression
	  evaluation.

Tue May 27 18:28:58 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/expr.rb : Fix array-subscript-expression evaluation in
	  order not to derive the representative array element if the definite
	  subscript value is out of bound.

Tue May 27 17:27:30 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Revert previous revision of the address
	  derivation and revise memory binding of the representative array
	  element so that the reverse resolution by memory address can work.

Tue May 27 14:03:21 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Revise address derivation logic in order